syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.github.saturn_xiv.palm.plugins.balsam.v1";
option go_package = "github.com/saturn-xiv/palm/atropa/balsam/services/v2";
package palm.balsam.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ----------------------------------------------------------------------------

service Aes {
  rpc Encrypt(AesPlainMessage) returns (AesCodeMessage) {}
  rpc Decrypt(AesCodeMessage) returns (AesPlainMessage) {}
}
message AesPlainMessage { bytes payload = 1; }
message AesCodeMessage {
  bytes payload = 1;
  bytes salt = 2;
}

// ----------------------------------------------------------------------------

service Jwt {
  rpc Sign(JwtSignRequest) returns (JwtSignResponse) {}
  rpc Verify(JwtVerifyRequest) returns (JwtVerifyResponse) {}
}
message JwtSignRequest {
  optional string key_id = 1;

  string issuer = 11;
  string subject = 12;
  repeated string audiences = 13;
  google.protobuf.Timestamp not_before = 18;
  google.protobuf.Timestamp expires_at = 19;

  optional string extra = 99;
}
message JwtSignResponse { string token = 1; }
message JwtVerifyRequest {
  string token = 1;
  string issuer = 2;
  string audience = 3;
}
message JwtVerifyResponse {
  string jwt_id = 1;
  optional string key_id = 2;

  string subject = 11;
  optional string extra = 19;
}

// ----------------------------------------------------------------------------

service HMac {
  rpc Sign(HMacSignRequest) returns (HMacSignResponse) {}
  rpc Verify(HMacVerifyRequest) returns (google.protobuf.Empty) {}
}
message HMacSignRequest { bytes plain = 1; }
message HMacSignResponse {
  bytes code = 1;
  bytes salt = 2;
}
message HMacVerifyRequest {
  bytes plain = 1;
  bytes code = 2;
  bytes salt = 3;
}
